--- a/ski-shop/src/App.css
+++ b/ski-shop/src/App.css
@@ -10,7 +10,7 @@
 :root {
   --main-color: #065a82;
   --text-color: #232323;
-  --secondary-color: #0797b0;
+  --secondary-color: #b3a20f;
 }
 
 .App {
