--- a/ski-shop/src/App.css
+++ b/ski-shop/src/App.css
@@ -24,6 +24,10 @@
   padding: 15px 2rem;
   display: flex;
   justify-content: space-between;
+  position: -webkit-sticky;
+  position: sticky;
+  top: 0;
+  z-index: 1;
 }
 
 .navbar .logo {
@@ -62,10 +66,11 @@ main {
   margin: 2rem 0;
 }
 
+
 .products {
   display: flex;
   align-items: center;
-  justify-content: flex-start;
+  justify-content: center;
   flex-wrap: wrap;
   width: 100%;
 }
@@ -76,12 +81,16 @@ main {
   justify-content: space-between;
   cursor: pointer;
   height: 550px;
+  min-width: 300px;
   flex-basis: 25%;
   padding: 10px;
   border: 4px solid #fff;
   background-color: #eee;
   position: relative;
   overflow: hidden;
+  box-shadow: 0px 0px 8px 0px gray;
+  margin: 20px;
+  border-radius: 5px;
 }
 
 .product>* {
@@ -93,7 +102,7 @@ main {
   width: 100%;
   height: 55%;
   object-fit: contain;
-  background-color: #fff;
+  background-color: rgba(255, 255, 255, 0);
 }
 
 .product-name {
