--- a/ski-shop/src/App.css
+++ b/ski-shop/src/App.css
@@ -24,6 +24,7 @@
   padding: 15px 2rem;
   display: flex;
   justify-content: space-between;
+  align-items: center;
   position: -webkit-sticky;
   position: sticky;
   top: 0;
@@ -31,8 +32,7 @@
 }
 
 .navbar .logo {
-  color: #fff;
-  text-transform: uppercase;
+  height: 100px;
 }
 
 .btn {
@@ -45,12 +45,13 @@
 .shopping-cart-btn {
   color: #fff;
   display: flex;
+
 }
 
 .product-count {
   margin-top: -5px;
-  width: 20px;
-  height: 20px;
+  width: 25px;
+  height: 25px;
   border-radius: 12px;
   background-color: red;
   overflow: hidden;
