--- a/ski-shop/src/details.css
+++ b/ski-shop/src/details.css
@@ -26,6 +26,7 @@
 .details {
     width: 60%;
     height: 90%;
+    min-width: 600px;
     margin: 2rem auto;
     background-color: #eee;
     padding: 1rem;
@@ -36,6 +37,7 @@
     box-shadow: 0px 0px 10px 0px rgba(61, 176, 243, 0.027);
     cursor:auto;
     z-index: 15;
+    overflow-y:auto;
 }
 
 .details .header {
@@ -55,10 +57,6 @@
     cursor: pointer;
 }
 
-.p {
-    color: white;
-}
-
 .titleContainer {
     width: 80vw;
     text-align: center;
@@ -66,14 +64,63 @@
 
 .detailsContainer {
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
     width: 100%;
 }
 
-.imageBlock {
+.detailColumn {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 48%;
+}
+
+.detailImage {
+    width: 100%;
+    min-width: 200px;
+    height: 45vh;
+    margin-bottom: 10px;
+    object-fit: contain;
+}
+
+.placeholder {
+    width: 4%;
+}
+
+.shortDescContainer{
+    margin-top: 10px;
+}
+
+.shortDesc {
+    color: black;
+    font-size: 1.1rem;
+    text-align: center;
+    font-weight: 300;
+}
+
+.priceContainer {
+    margin-top: 20px;
+}
+
+.price {
+    color: black;
+    font-size: 1.2rem;
+    text-align: center;
+    font-weight: 500;
+}
+
+.longDescContainer {
+    margin-top: 10px;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
     align-items: center;
 }
 
-.detailImage{
-    width: 20vw
-}
+/* .line {
+    height: 2px;
+    width: 50%;
+    margin-top: 5px;
+    margin-bottom: 5px;
+    background-color: var(--main-color);
+} */
