--- a/ski-shop/src/details.css
+++ b/ski-shop/src/details.css
@@ -33,7 +33,7 @@
     display: flex;
     flex-direction: column;
     position: relative;
-    border-radius: 3px;
+    border-radius: 5px;
     box-shadow: 0px 0px 10px 0px rgba(61, 176, 243, 0.027);
     cursor:auto;
     z-index: 15;
@@ -42,11 +42,12 @@
 
 .details .header {
     display: flex;
-    background-color: #ccc;
+    background-color: rgb(211, 211, 211);
     padding: 10px 20px;
     justify-content: space-between;
     height: 6vh;
     margin-bottom: 15px;
+    border-radius: 5px;
 }
 
 .close-btn {
@@ -116,11 +117,3 @@
     flex-direction: column;
     align-items: center;
 }
-
-/* .line {
-    height: 2px;
-    width: 50%;
-    margin-top: 5px;
-    margin-bottom: 5px;
-    background-color: var(--main-color);
-} */
