--- a/ski-shop/src/shoppingCart.css
+++ b/ski-shop/src/shoppingCart.css
@@ -23,7 +23,7 @@
 
 .shoppingCart .header {
     display: flex;
-    background-color: #ccc;
+    background-color: rgb(211, 211, 211);
     padding: 10px 20px;
     justify-content: space-between;
 }
