--- a/ski-shop/src/shoppingCart.css
+++ b/ski-shop/src/shoppingCart.css
@@ -20,6 +20,7 @@
     display: flex;
     flex-direction: column;
     position: relative;
+    z-index: 5;
 }
 
 .shoppingCart .header {
@@ -91,4 +92,16 @@
 
 .total {
     margin-top: 15px;
+}
+
+.clickableSpace {
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 2;
+    cursor: pointer;
 }
