--- a/ski-shop/src/checkout.css
+++ b/ski-shop/src/checkout.css
@@ -50,3 +50,59 @@
     width: 80vw;
     text-align: center;
 }
+
+.formContainer {
+    width: 100%;
+}
+
+.column {
+    display: flex;
+    flex-direction: column;
+    align-items: left;
+    width: 50%;
+    background-color:aliceblue;
+    border-radius: 15px;
+    box-shadow: 0px 1px 2px 0px gray;
+}
+
+.columnHeader {
+    display: flex;
+    padding: 10px 20px;
+    justify-content: start;
+    height: 6vh;
+    margin-bottom: 15px;
+    border-radius: 5px;
+    width: 100%;
+}
+
+.info1 {
+    margin-left: 30px;
+}
+
+.inputsContainer {
+    width: 100%;
+    margin-left: 20px;
+}
+
+.inputs{
+    border-radius: 5px;
+    border: 0;
+    box-shadow: 0px 1px 3px 0px black;
+    height: 35px;
+}
+
+label {
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    width: 40%;
+}
+
+.inputHeader {
+    text-align: center;
+}
+
+::placeholder {
+    color: gray;
+    text-align: center;
+}
