--- a/ski-shop/src/checkout.css
+++ b/ski-shop/src/checkout.css
@@ -71,6 +71,7 @@
     display: flex;
     flex-direction: column;
     align-items: left;
+    justify-content: space-between;
     width: 35%;
     background-color: aliceblue;
     border-radius: 15px;
@@ -164,4 +165,53 @@ select {
 input {
     text-align: center;
     font-size: 16px;
+}
+
+.productCheckoutBox {
+    display: flex;
+    width: 100%;
+    justify-content: center;
+}
+
+.productCheckoutContent {
+    display: flex;
+    justify-content: space-between;
+    width: 85%;
+    font-size: 16px;
+    margin-top: 5px;
+}
+
+.productNameAndQ {
+    display: flex;
+    flex-direction: row;
+    width: 60%;
+    max-width: 75%;
+}
+
+.separator {
+    width: 90%;
+    height: 1px;
+    background-color: rgba(128, 128, 128, 0.719);
+    margin-top: 10px;
+    margin-bottom: 10px;
+    align-self: center;
+}
+
+.totalCheckout {
+    width: 85%;
+    align-self: center;
+    text-align: right;
+}
+
+.submitCheckout {
+    margin-bottom: 20px;
+    width: 50%;
+    height: 10%;
+    font-size: 16px;
+    font-weight: bold;
+    align-self: center;
+    border-radius: 20px;
+    border: 0;
+    box-shadow: 0px 0px 4px 0px black;
+    background-color: aliceblue;
 }
