--- a/ski-shop/src/checkout.css
+++ b/ski-shop/src/checkout.css
@@ -214,4 +214,8 @@ input {
     border: 0;
     box-shadow: 0px 0px 4px 0px black;
     background-color: aliceblue;
+    cursor: pointer;
+}
+.submitCheckout:hover {
+    background-color: rgb(221, 238, 252);
 }
